# drf_clean_project

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  gunicorn.sh  manage.py  pyproject.toml  requirements.txt
_project_/: asgi.py  urls.py  wsgi.py
_project_/settings/: __init__.py  base_settings.py
configs/web/: Dockerfile
src/: env.tmpl
src/_project/: asgi.py  wsgi.py
src/_project/settings/: base_settings.py
src/users/migrations/: 0001_initial.py
src/users/models/: user_model.py
src/users/serializers/: __init__.py  auth_serializers.py
src/users/urls/: user_urls.py
src/users/views/: __init__.py
src/utils/: apps.py  decorators.py
users/urls/: auth_urls.py
users/views/: auth_view.py
utils/: utils.py
